Better visibility; Some bugs fixed

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,5 @@
 header{
+    z-index: 9;
     position: absolute;
     right: 50%;
     top: 35px;
@@ -92,9 +93,10 @@ header{
     top: 55px;
     background-color: white;
     z-index: 7;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
     & li{
         display: block;
-        z-index: inherit;
+        z-index: 4;
         &.empty{
             display: none;
         }
@@ -120,6 +122,12 @@ header{
                 padding-inline-start: 30px;
                 grid-template-columns: min-content min-content min-content 1fr min-content min-content min-content;
                 gap: 40px;
+            }
+            & .links-active{
+                height: min-content;
+                padding: 30px 80px 30px 50px;
+                gap: 25px;
+                font: var(--text-h5)
             }
         }
     }
@@ -151,7 +159,7 @@ header{
                 }
             }
             & .links-active{
-                width: max(240px, 20vw);
+                width: 240px;
                 height: min-content;
                 padding: 22px 89px 20px 40px;
                 gap: 25px;
@@ -196,6 +204,7 @@ header{
             padding: 20px 25px;
             gap: 15px;
             z-index: 99;
+            font: var(--text-md);
         }
     }
 }
